@@ -329,6 +329,61 @@ class TestTaskActivites(FunctionalTestCase):
         self.assertEquals(u'New task opened by Test User', activity.summary)
 
 
+class TestTaskReassignActivity(IntegrationTestCase):
+
+    features = ('activity', )
+
+    def reassign(self, browser, responsible, response, user=None):
+        if user is None:
+            user = self.manager
+        browser.login(user).open(self.task)
+        browser.css('#workflow-transition-task-transition-reassign').first.click()
+        browser.fill({'Response': response})
+        form = browser.find_form_by_field('Responsible')
+        form.find_widget('Responsible').fill('fa:' + responsible.getId())
+        browser.css('#form-buttons-save').first.click()
+
+    @browsing
+    def test_properties(self, browser):
+        self.login(self.regular_user)
+        self.reassign(browser, self.meeting_user, u'Bitte Abkl\xe4rungen erledigen.')
+
+        activities = Activity.query.all()
+        self.assertEqual(1, len(activities))
+
+        reassign_activity = activities[-1]
+
+        self.assertEquals(u'task-transition-reassign', reassign_activity.kind)
+        self.assertEquals(u'Vertragsentwurf \xdcberpr\xfcfen', reassign_activity.title)
+        self.assertEquals(u'Reassigned from <a href="http://nohost/plone/@@user-details/kathi.barfuss">'
+                          u'B\xe4rfuss K\xe4thi (kathi.barfuss)</a> '
+                          u'to <a href="http://nohost/plone/@@user-details/herbert.jager">'
+                          u'J\xe4ger Herbert (herbert.jager)</a> by admin (admin)',
+                          reassign_activity.summary)
+        self.assertEquals(u'Bitte Abkl\xe4rungen erledigen.', reassign_activity.description)
+
+    @browsing
+    def test_reassign_message_does_not_include_user_when_he_is_old_responsible(self, browser):
+        self.login(self.regular_user)
+        self.reassign(browser, self.meeting_user,
+                      u'Bitte Abkl\xe4rungen erledigen.',
+                      self.regular_user)
+
+        activities = Activity.query.all()
+        self.assertEqual(1, len(activities))
+
+        reassign_activity = activities[-1]
+
+        self.assertEquals(u'task-transition-reassign', reassign_activity.kind)
+        self.assertEquals(u'Vertragsentwurf \xdcberpr\xfcfen', reassign_activity.title)
+        self.assertEquals(u'Reassigned from <a href="http://nohost/plone/@@user-details/kathi.barfuss">'
+                          u'B\xe4rfuss K\xe4thi (kathi.barfuss)</a> '
+                          u'to <a href="http://nohost/plone/@@user-details/herbert.jager">'
+                          u'J\xe4ger Herbert (herbert.jager)</a>',
+                          reassign_activity.summary)
+        self.assertEquals(u'Bitte Abkl\xe4rungen erledigen.', reassign_activity.description)
+
+
 class TestTaskReassignActivity(FunctionalTestCase):
 
     layer = OPENGEVER_FUNCTIONAL_ACTIVITY_LAYER
@@ -382,20 +437,6 @@ class TestTaskReassignActivity(FunctionalTestCase):
             self.org_unit.id() + ':' + responsible)
 
         browser.css('#form-buttons-save').first.click()
-
-    @browsing
-    def test_properties(self, browser):
-        self.task = self.add_task(browser)
-        self.reassign(browser, 'hugo.boss', u'Bitte Abkl\xe4rungen erledigen.')
-
-        activities = Activity.query.all()
-        self.assertEqual(2, len(activities))
-
-        reassign_activity = activities[-1]
-        self.assertEquals(u'task-transition-reassign', reassign_activity.kind)
-        self.assertEquals(u'Abkl\xe4rung Fall Meier', reassign_activity.title)
-        self.assertEquals(u'Reassigned from <a href="http://nohost/plone/@@user-details/james.meier">Meier James (james.meier)</a> to <a href="http://nohost/plone/@@user-details/hugo.boss">Boss Hugo (hugo.boss)</a> by <a href="http://nohost/plone/@@user-details/test_user_1_">Test User (test_user_1_)</a>', reassign_activity.summary)
-        self.assertEquals(u'Bitte Abkl\xe4rungen erledigen.', reassign_activity.description)
 
     @browsing
     def test_notifies_old_and_new_responsible(self, browser):
